# bootcamp

mjpeg_node/: CMakeLists.txt  package.xml
mjpeg_node/config/: config.yaml
mjpeg_node/include/mjpeg_node/: mjpeg_node.hpp
mjpeg_node/launch/: deploy.launch.py
mjpeg_node/src/: mjpeg_node.cpp  mjpeg_node_main.cpp
satellite_node/: CMakeLists.txt  package.xml
satellite_node/config/: config.yaml
satellite_node/include/satellite_node/: satellite_node.hpp  tile_fetcher.hpp
satellite_node/launch/: deploy.launch.py
satellite_node/meshes/: joby_s4.stl
satellite_node/rviz/: satellite.rviz
satellite_node/scripts/: gen_joby_mesh.py
satellite_node/src/: satellite_node.cpp  satellite_node_main.cpp  tile_fetcher.cpp
udp_node/: CMakeLists.txt  package.xml
udp_node/config/: config.yaml
udp_node/include/udp_node/: udp_node.hpp
udp_node/launch/: deploy.launch.py
udp_node/src/: udp_node.cpp  udp_node_main.cpp
vlm_node/: CMakeLists.txt  package.xml
vlm_node/config/: config.yaml
vlm_node/include/vlm_node/: vlm_node.hpp
vlm_node/launch/: deploy.launch.py
vlm_node/src/: vlm_node.cpp  vlm_node_main.cpp
